# UTwente-RELbot-Simulation-Vision-and-Controll

./: .gitignore  README.md
assignment1/: CMakeLists.txt  package.xml
assignment1/msg/: ObjectBrightness.msg  ObjectPosition.msg
assignment1/src/: CheckBrightness.cpp  FindBrightObject.cpp  FindObject.cpp  SequenceController.cpp  SetPoints.cpp  presets.h
launch/: bright_object.yaml  camera.yaml  coloured_object.yaml  hsv_test_values  relbot_setpoints.yaml  relbot_simulation.yaml
